<resources>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="app_name">Go4Lunch</string>
    <string name="bottom_navigation_menu_map">Map View </string>
    <string name="bottom_navigation_menu_list">List View </string>
    <string name="bottom_navigation_menu_workmates">Workmates </string>

    <!-- Title fragments -->
    <string name="fragment_title_map">I\'m Hungry !</string>
    <string name="fragment_title_list">I\'m Hungry !</string>
    <string name="fragment_title_workmates">"Available Workmates "</string>
    <string name="item_restaurant_photo">restaurant photo</string>
    <string name="item_stars">stars</string>
    <string name="item_people">item peoples</string>
    <string name="details_restaurant_fragment">" Restaurant  Details"</string>
    <string name="place_open">Open</string>
    <string name="place_close">Closed</string>
    <string name="unknown_information">U.W</string>
    <string name="description_like_button">Like button</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_dialog_restaurant_detail_like_message">A restaurant has already been liked, do you want to continue ? </string>
    <string name="alert_dialog_restaurant_detail_dislike_message">Do you want to dislike this place ? </string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_photo">user photo</string>
    <string name="nav_menu_settings">SETTINGS</string>
    <string name="nav_menu_logout">LOGOUT</string>
    <string name="permission_granted">Permission granted</string>
    <string name="login_canceled">login canceled</string>
    <string name="no_connection">No connection</string>
    <string name="unknow_error">unknow error</string>
    <string name="no_place_liked">No place liked</string>


    <!-- Facebook auth -->
    <string name="facebook_application_id" translatable="false">410539103953344</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb410539103953344</string>
    <string name="facebook_client_token" translatable="false">2e4acd66d4a9940dd83280c75616067f</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notification_switch">Notifications</string>


</resources>